Restore JDK 8 compatibility